test-cases/negative/test_021_if_without_then.lay
# negative test: if without 'then' keyword
# expected: error should be thrown

if true
  print 'hello'


